fixed(hopefully) navbar collapse

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2910,7 +2910,7 @@ select[multiple].input-lg {
   margin-bottom: 10px;
   color: #737373;
 }
-@media (min-width: 768px) {
+@media (min-width: 990px) {
   .form-inline .form-group {
     display: inline-block;
     margin-bottom: 0;
